welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:11: error: reassignment to val
    return posfinale=true
                    ^ColumnByColumn:12: error: reassignment to val
  }else{return posfinale=false}
                        ^